--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,7 @@ h1 {
 /* Some Random Information */
 .section-1 {
   background-color: #ffffff;
+  margin-bottom: 100px;
 }
 
 .information-header {
@@ -114,6 +115,7 @@ h1 {
   border-style: solid;
   border-radius: 15px;
   border-width: 4px;
+  margin-bottom: 7px;
 }
 
 .text {
@@ -121,4 +123,76 @@ h1 {
   color: #898b8e;
   text-align: center;
   font-size: 18px;
+}
+
+/* Quote Section */
+.quote-section {
+  background-color: #E5E7EB;
+}
+
+.quote-container {
+  display: flex;
+  align-items: center;
+  padding: 100px 300px 50px 300px;
+  flex-direction: column;
+}
+
+.quote {
+  font-size: 36px;
+  font-weight: 300;
+  font-style:italic;
+  margin-bottom: 0px;
+}
+
+.quotee {
+  align-self: end;
+  font-size: 23px;
+  font-weight: 900;
+}
+
+/* Call To Action */
+.section-3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.blue-background-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #3882F6;
+  width: 1050px;
+  height: 150px;
+  margin: 100px;
+  border-radius: 10px;
+}
+
+.call-to-action-title {
+  margin-bottom: -15px;
+}
+
+.call-to-action-subtext {
+  color: #E5E7EB;
+}
+
+.sign-up-inverted {
+  background-color: #3882F6;
+  color: #F9FAF8; 
+  border-color: #F9FAF8;
+  border-style: solid;
+  border-radius: 10px;
+  padding: 10px 30px;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+/* Footer */
+.footer {
+  display: flex;
+  background-color: #1F2937;
+  align-items: center;
+  justify-content: center;
+  color: #F9FAF8;
+  padding: 40px;
 }
